# GxAnyPluginExample

./: CMakeLists.txt  README.md
cmake/: GetGitDep.cmake
main/: CMakeLists.txt
main/src/: dynamic_load.cpp  link_load.cpp
modules/test_plug/: CMakeLists.txt
modules/test_plug/include/: reg_test_plug.h
modules/test_plug/src/: classroom.h  reg_test_plug.cpp  student.cpp  student.h
